# crdt-experiments

./: LICENSE  README.md
crdt-article-examples/part-1/: add-only-set.js  set-with-pair.js
crdt-article-examples/part-2/: add-after-removal.js  set-with-timestamps.js  set-with-version-vector.js
json-crdt-rust/: Cargo.toml  README.md
json-crdt-rust/benches/: simple-insertions.rs  simple-merge.rs
json-crdt-rust/benches/automerge-trace/: README.md  trace.json
json-crdt-rust/examples/: merge_multiple_documents.rs  paper_trace.rs  paper_trace_memory.rs  paper_trace_serialization.rs
json-crdt-rust/src/: client_registry.rs  lib.rs  serde.rs  transaction.rs  types.rs
json-crdt-rust/src/crdt/: mod.rs  text.rs
json-crdt-rust/src/crdt/map/: map.rs  mod.rs  set.rs  shared.rs
json-crdt-rust/src/crdt/shared/: mod.rs  tree.rs
json-crdt-rust/src/doc/: doc.rs  full.rs  lazy.rs  mod.rs  traits.rs
json-crdt-rust/src/operation_log/: log.rs  mod.rs  serde.rs  shared.rs
json-crdt-rust/src/view/: cache.rs  mod.rs  view.rs
json-crdt-rust/tests/: integration.rs
